--- a/VerificacaoRotinas/Views/_ViewImports.cshtml
+++ b/VerificacaoRotinas/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using VerificacaoRotinas
-@using VerificacaoRotinas.Models
+@using VerificacaoRotinas.Models;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
